# aqaengineer_project

./: observer.py  pyproject.toml  requirements.txt
.github/workflow/: main.yml  python.yml
.github/workflows/: main.yml
framework/helpers/kafka/consumers/: register_events.py
framework/internal/: singleton.py
framework/internal/http/: account.py  mail.py
framework/internal/kafka/: consumer.py  producer.py  subscriber.py
tests/: conftest.py  test_register_events_error_consumer.py  test_registration.py
